test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/double_subscript.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(4)
  ,
  const int(5)
  ,
  const int(6)
  }
  ;
  return
  identifier(arr)
  [
  const double(2.0)
  ]
  ;
  }
